--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 script: 
   - echo hoo
   - npm install --global surge
+  - export SURGE_TOKEN=4f75270ec1d0e4d48c5ecc3959f9d888
+  - export SURGE_LOGIN=jayasanka.sack@gmail.com
   - surge
